--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth;     
 }
+
+body {
+    overflow: hidden;
+  }
+  
