--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;     
+    scroll-behavior: smooth;  
+}
+
+body{
+    overflow: auto;
 }
 
 
